Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/multicatch/Neg02.out
Neg02.java:24:13: compiler.err.multicatch.parameter.may.not.be.assigned: ex
1 error
